--- a/config.json
+++ b/config.json
@@ -4,7 +4,8 @@
     "github": "https://github.com/istekdev/CrypDough",
     "created": 1762991399
   },
-  "endpoint": "https://api.coingecko.com/api/v3/simple/price?ids={currency}&vs_currencies=usd",
+  "currency": "usd",
+  "endpoint": "https://api.coingecko.com/api/v3/simple/price?ids={currency}&vs_currencies={currency}",
   "coins": ["bitcoin", "ethereum", "tether", "ripple", "binancecoin", "solana", "usd-coin", "tron", "dogecoin", "cardano"],
   "delay": 10
 }
